# YOLOv8-TensorRT

./: CMakeLists.txt  gitignore  test.cpp
